fixed fav button from overlapping the header

--- a/assets/style/favorites.css
+++ b/assets/style/favorites.css
@@ -108,3 +108,19 @@ img {
   background-color: #254252;
 }
 
+@media (max-width: 480px) {
+  .form{
+    flex-flow: column wrap;
+    align-content: center;
+  }
+
+  #returnBtnLink {
+    position: static;
+  }
+
+  header{
+    flex-flow: column wrap;
+    align-content: center;
+    padding: 20px 0px;
+  }
+}
